# SolarInspector

./: CMakeLists.txt  data.json
include/: image.h
src/: .TSI.cpp.swp  TSI.cpp  image.cpp
utilities/: utils.h
