cmake_minimum_required(VERSION 2.8.9)
project (TSI)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS})
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost 1.71.0 COMPONENTS system filesystem regex REQUIRED) 


if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS}) 
    add_executable(TSI src/TSI.cpp src/image.cpp src/ser.cpp src/pipp_buffer.cpp)
    target_link_libraries( TSI ${OpenCV_LIBS} ${Boost_LIBRARIES})
 endif()
